Repositories are changed to use Spring Data with MongoDB. DTOs are created to exchange data between modules. Happy path integrations tests are created and will be continuing.